add measure to product, add more api docs
