# src/components/Upload/upload.controller.js
@@ -1,16 +1,17 @@
-import uploadServices from "./upload.services";
-import { error, success } from "../../common/utils/response";
+import uploadServices from './upload.services';
+import { error, success } from '../../common/utils/response';
 
 const uploadImage = async (req, res) => {
   try {
+    console.log('uploadImage');
     if (req.file) {
       const imgEncoded =
-        "data:image/png;base64," + req.file.buffer.toString("base64");
+        'data:image/png;base64,' + req.file.buffer.toString('base64');
 
       const uploadedReponse = await uploadServices.uploadImage(imgEncoded);
       return res.send({
         uploaded: true,
-        url: uploadedReponse.url,
+        url: uploadedReponse.url
       });
     }
   } catch (err) {
@@ -19,5 +20,5 @@ const uploadImage = async (req, res) => {
 };
 
 export default {
-  uploadImage,
+  uploadImage
 };
